evidence_library/aws/audit_evidence/ec2/us-east-2/security_groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0281bd23cf2b7ec63",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0b68e9dea8460f1e4",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:798094440826:security-group/sg-0281bd23cf2b7ec63",
            "OwnerId": "798094440826",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "798094440826",
                            "GroupId": "sg-0281bd23cf2b7ec63"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "22462da9-fba6-4589-bd12-9c63823f058a",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "22462da9-fba6-4589-bd12-9c63823f058a",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "960",
            "date": "Thu, 17 Sep 2026 02:05:37 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
